# CMD-R

./: Cargo.toml  Dockerfile  Procfile  README.md  railway.tomi
src/: main.rs
src/ai/: command_r_plus.rs  mod.rs
src/bot/: commands.rs  handler.rs  mod.rs
src/utils/: logger.rs
