[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
mio = "=0.8.8"
openssl = { version = "0.10", features = ["vendored"] }

[patch.crates-io]
openssl-sys = { version = "0.9", features = ["vendored"] }
